CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
SET(PROJECT_NAME TFLiteWASM)
PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

MESSAGE(STATUS "C Compiler Version : ${CMAKE_C_COMPILER_VERSION}")
MESSAGE(STATUS "C++ Compiler Version : ${CMAKE_CXX_COMPILER_VERSION}")

# C
IF("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} ${EMSDK_FLAGS} -Wall")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EMSDK_FLAGS} -Wall -g -O0")
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} ${EMSDK_FLAGS} -Wall")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EMSDK_FLAGS} -Wall -g -O0")
ENDIF()

# CXX
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EMSDK_FLAGS} -Wall")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EMSDK_FLAGS} -Wall -g -O0")
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EMSDK_FLAGS} -Wall")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EMSDK_FLAGS} -Wall -g -O0")
ENDIF()

ADD_SUBDIRECTORY(recursion)
ADD_SUBDIRECTORY(permutation)
ADD_SUBDIRECTORY(formula)
ADD_SUBDIRECTORY(split)
ADD_SUBDIRECTORY(memory_and_pointer)
ADD_SUBDIRECTORY(unique)
ADD_SUBDIRECTORY(prefix_sum)
ADD_SUBDIRECTORY(adjacency_matrix)
ADD_SUBDIRECTORY(adjacency_list)
