SET(TARGET_NAME adjacency_matrix)

FILE(GLOB SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE})
# INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES})
# TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PRIVATE ${INCLUDE_DIRECTORIES})
# TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE ${DEPENDENCIES})